Quorum/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignBooleanBoolean.quorum
class Main
    action Main
        boolean v = true
        Test(v)
    end

    action Test(boolean var)
        if var = true
            output "passed"
        end
    end
end
