Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjBooleanField.quorum
class Main
    boolean v = true
    action Main
        Test(v)
    end

    action Test(Integer var)
    end
end
